--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-dist/index.html
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>ember-cli-mentionable</title>
+    <meta http-equiv="refresh" content="0; url=dist/" />
+  </head>
+</html>
